update proto java package name and proto names
