# openapi.yaml
@@ -15,7 +15,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/RHELHost'
+                            $ref: '#/components/schemas/RhelHost'
                 required: true
             responses:
                 "200":
@@ -48,7 +48,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/RHELHost'
+                            $ref: '#/components/schemas/RhelHost'
                 required: true
             responses:
                 "200":
@@ -98,7 +98,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/K8sCluster'
+                            $ref: '#/components/schemas/K8SCluster'
                 required: true
             responses:
                 "200":
@@ -131,7 +131,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/K8sCluster'
+                            $ref: '#/components/schemas/K8SCluster'
                 required: true
             responses:
                 "200":
@@ -427,7 +427,7 @@ components:
             properties:
                 k8sCluster:
                     allOf:
-                        - $ref: '#/components/schemas/K8sCluster'
+                        - $ref: '#/components/schemas/K8SCluster'
                     description: The K8s cluster created in Kessel Asset Inventory
         CreateNotificationsIntegrationResponse:
             required:
@@ -459,7 +459,7 @@ components:
             properties:
                 host:
                     allOf:
-                        - $ref: '#/components/schemas/RHELHost'
+                        - $ref: '#/components/schemas/RhelHost'
                     description: The RHEL Host created in Kessel Asset Inventory
         DeleteK8sClusterResponse:
             type: object
@@ -484,7 +484,7 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        K8sCluster:
+        K8SCluster:
             required:
                 - metadata
             type: object
@@ -507,8 +507,8 @@ components:
                         The entities that registered this item in the Kessel Asset Inventory. The
                          same resource may be registered by multiple reporters.
                 data:
-                    $ref: '#/components/schemas/K8sClusterDetail'
-        K8sClusterDetail:
+                    $ref: '#/components/schemas/K8SClusterDetail'
+        K8SClusterDetail:
             type: object
             properties:
                 externalClusterId:
@@ -532,8 +532,8 @@ components:
                 Nodes:
                     type: array
                     items:
-                        $ref: '#/components/schemas/K8sClusterDetailNodesInner'
-        K8sClusterDetailNodesInner:
+                        $ref: '#/components/schemas/K8SClusterDetailNodesInner'
+        K8SClusterDetailNodesInner:
             type: object
             properties:
                 name:
@@ -665,28 +665,6 @@ components:
                 status:
                     type: integer
                     format: enum
-        RHELHost:
-            required:
-                - metadata
-            type: object
-            properties:
-                metadata:
-                    allOf:
-                        - $ref: '#/components/schemas/Metadata'
-                    description: Metadata about this resource
-                reporterData:
-                    writeOnly: true
-                    allOf:
-                        - $ref: '#/components/schemas/ReporterData'
-                    description: Write only reporter specific data
-                reporters:
-                    readOnly: true
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/ReporterData'
-                    description: |-
-                        The entities that registered this item in the Kessel Asset Inventory. The
-                         same resource may be registered by multiple reporters.
         ReporterData:
             type: object
             properties:
@@ -722,6 +700,28 @@ components:
                     type: string
                 value:
                     type: string
+        RhelHost:
+            required:
+                - metadata
+            type: object
+            properties:
+                metadata:
+                    allOf:
+                        - $ref: '#/components/schemas/Metadata'
+                    description: Metadata about this resource
+                reporterData:
+                    writeOnly: true
+                    allOf:
+                        - $ref: '#/components/schemas/ReporterData'
+                    description: Write only reporter specific data
+                reporters:
+                    readOnly: true
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ReporterData'
+                    description: |-
+                        The entities that registered this item in the Kessel Asset Inventory. The
+                         same resource may be registered by multiple reporters.
         Status:
             type: object
             properties:
